added intro Mantra

--- a/bindu.tex
+++ b/bindu.tex
@@ -896,8 +896,8 @@ sūkṣmarūpeṇa tiṣṭanti\dd{}\linelabel{_165e}
 %-----------------------------
 %Now ten vitalwinds are situated within the body.  
 %-----------------------------
-\note[type=source, labelb=178, labele=_178e, nosep]{cf. YSv (PT pp. 838-839): idānīṃ dehamadhyasthāḥ kathyante daśa vāyavaḥ | kāryakāraṇabhāvena kathyante tāni cihnataḥ | prāṇavāyur hṛdi sthitvā śvāsocchvāsaṃ karoti saḥ | asikāntaṃ pītam īśaṃ karoti yogasaṃjñakaḥ | apāno gudadeśasthaḥ karoty ākuñcanaṃ sa tu | stambhanañ ca tathāpānaḥ samāno nābhimaṇḍale | toṣakādipoṣakan tu nāḍīnāṃ rūcidāyakaḥ | dīptāgnimadhye 'pi tathā samānākhyā mahāparā | tālumadhye udānas tu aśnāti pibatīti ca | śarīraṃ sakalaṃ vyāpya vyānavāyuḥ pratiṣṭhitaḥ | śarīre cālanaṃ teṣu karoti sthāpayaty api | netramadhye kūrmanāmā nimeṣonmeṣakṛdayam |}
-\note[type=source, labelb=179,labele=_178e, nosep]{cf. SSP 1.67 (Ed. pp. 23-24): atha daśavāyavaḥ | hṛdaye prāṇavāyur ucchvāsaniḥśvāsakārako hakārasakārātmakaś ca | gude tv apānavāyuḥ recakakumbhakapūrakaś ca | nābhau samānavāyuḥ dīpakaḥ pācakaś ca | kaṇṭhe vyānavāyuḥ śoṣaṇāpy āyanakārakaś ca | tālau udānavāyuḥ grasanavamanajalpakārakaś ca| nāgavāyuḥ sarvāṅgavyāpakaḥ mocakaś cālakaś ca | kūrmavāyuḥ cakṣuṣor unmeṣakārakaś ca |}
+\note[type=source, labelb=178, labele=_178e, nosep]{cf. YSv (PT pp. 838-839): idānīṃ dehamadhyasthāḥ kathyante daśa vāyavaḥ | kāryakāraṇabhāvena kathyante tāni cihnataḥ | prāṇavāyur hṛdi sthitvā śvāsocchvāsaṃ karoti saḥ | asikāntaṃ pītam īśaṃ karoti yogasaṃjñakaḥ | apāno gudadeśasthaḥ karoty ākuñcanaṃ sa tu | stambhanañ ca tathāpānaḥ samāno nābhimaṇḍale | toṣakādipoṣakan tu nāḍīnāṃ rucidāyakaḥ | dīptāgnimadhye 'pi tathā samānākhyā mahāparā | tālumadhye udānas tu aśnāti pibatīti ca | śarīraṃ sakalaṃ vyāpya vyānavāyuḥ pratiṣṭhitaḥ | śarīre cālanaṃ teṣu karoti sthāpayaty api | netramadhye kūrmanāmā nimeṣonmeṣakṛdayam |}
+\note[type=source, labelb=179,labele=_178e, nosep]{cf. SSP 1.67 (Ed. pp. 23-24): atha daśavāyavaḥ | hṛdaye prāṇavāyur ucchvāsaniḥśvāsakārako hakārasakārātmakaś ca | gude tv apānavāyuḥ recakakumbhakapūrakaś ca | nābhau samānavāyuḥ dīpakaḥ pācakaś ca | kaṇṭhe vyānavāyuḥ śoṣaṇāpy āyanakārakaś ca | tālau udānavāyuḥ grasanavamanajalpakārakaś ca | nāgavāyuḥ sarvāṅgavyāpakaḥ mocakaś cālakaś ca | kūrmavāyuḥ cakṣuṣor unmeṣakārakaś ca |}
 idānīṃ śarīramadhye
 \app{\lem[wit={E,P,U2}]{vāyavo}
   \rdg[wit={X}]{vāyavas}
@@ -947,15 +947,16 @@ idānīṃ śarīramadhye
   \rdg[wit={B,L}]{\om}
 }\app{\lem[wit={ceteri},alt={hṛdayamadhye}]{\skm{r-hṛ}dayamadhye}
   \rdg[wit={B,L}]{\om}}
-\app{\lem[type=emendation, resp=egoscr, alt={ucchvāsapraśvāsaṃ}]{ucchvāsapraśvā:\\saṃ}
+\app{\lem[type=emendation, resp=egoscr]{śvāsocchvāsaṃ}
+  \rdg[wit={B}]{śvāsośvaroti}
+  \rdg[wit={E}]{śvāsocchāsaṃ}
+  \rdg[wit={L}]{śvāsośvareti}
+  \rdg[wit={P}]{śvāsochāsaṃ}
+  \rdg[wit={U2}]{svāsochvāsaṃ}
+  \rdg[wit={D}]{utsvāsaprasvāsaṃ}
   \rdg[wit={N1}]{utsvāsaprasvāsasaṃ}
   \rdg[wit={N2}]{ūrdhvaśvāsapraśvāsaṃ}
-  \rdg[wit={D}]{utsvāsaprasvāsaṃ}
-  \rdg[wit={U1}]{ūdhvasaprasase}
-  \rdg[wit={E}]{śvāsocchāsaṃ}
-  \rdg[wit={P}]{śvāsochāsaṃ}
-  \rdg[wit={B}]{śvāsośvaroti}
-  \rdg[wit={L}]{śvāsośvareti}}
+  \rdg[wit={U1}]{ūdhvasaprasase}}
 \app{\lem[wit={ceteri}]{karoti}
   \rdg[wit={D}]{karotī}
   \rdg[wit={B,L}]{\om}}/
@@ -1108,20 +1109,25 @@ tasmā\skp{d-vā}\app{\lem[wit={ceteri},alt={vāyoḥ}]{\skm{d-vā}yoḥ}
   \rdg[wit={P}]{vāyo}}
 \app{\lem[wit={ceteri}]{śarīraṃ}
   \rdg[wit={B,L}]{śarīre}}
-\app{\lem[wit={P,U2}]{calayati}
-  \rdg[wit={E}]{cālayati}
+\app{\lem[wit={X}]{calati}
   \rdg[wit={B}]{cālatī}
+  \rdg[wit={P,U2}]{calayati}
+  \rdg[wit={E}]{cālayati}
   \rdg[wit={L}]{cālayatī}
-  \rdg[wit={U2}]{calayati}
-  \rdg[wit={X}]{calati}}/
-\begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage}
-\app{\lem[wit={U2}, alt={śokam āpnoti vikṛtaḥ}]{śokam-āpnoti vikṛtaḥ}
-  \rdg[wit={B}]{śokam āpnoti vikrutaḥ}
-  \rdg[wit={E}]{śokam āpnoti || vivilaḥ}
-  \rdg[wit={L}]{śokam āpnoti vikutaḥ}
-  \rdg[wit={P}]{śopham āpnoti vikṛtaḥ}
-  \rdg[wit={U2}]{śokam āpnoti vikṛtaḥ}
-  \rdg[wit={X}]{\om}}\begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage}
+  \rdg[wit={U2}]{calayati}}/
+%\begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage}
+\app{\lem[wit={Y}]{śokaṃ}
+  \rdg[wit={X}]{\om}} 
+\app{\lem[wit={Y}]{āpnoti}
+  \rdg[wit={X}]{\om}} 
+\app{\lem[type=emendation, resp=egoscr, alt={vikṛte}]{vikṛte}
+  \rdg[wit={U2}, alt={śokam āpnoti vikṛtaḥ}]{vikṛtaḥ}
+  \rdg[wit={B}]{vikrutaḥ}
+  \rdg[wit={E}]{vivilaḥ}
+  \rdg[wit={L}]{vikutaḥ}
+  \rdg[wit={P}]{vikṛtaḥ}
+  \rdg[wit={U2}]{vikṛtaḥ}
+  \rdg[wit={X}]{\om}}%\begin{otherlanguage}{english}\textbf{\Large{\sic*{}}}\end{otherlanguage}
 %-----------------------------
 %kūrmavāyur netramadhye tiṣṭhati/ nimeṣonmeṣaṃ karoti/ \E
 %kūrmavāyur netramadhye           nimeṣonmeṣaṃ karoti \P
@@ -1160,10 +1166,10 @@ tasmā\skp{d-vā}\app{\lem[wit={ceteri},alt={vāyoḥ}]{\skm{d-vā}yoḥ}
       depth=2, 
       n=XXVI
     }
-    \xmlhead[h26]{[XXVI. The vitalwinds within the body]}
+    \xmlhead[h26]{[XXVI. The vital winds within the body]}
 \begin{tlate}[p26_01]
   \noindent
-  Now, ten vital winds are situated within the body. Their functions are taught. The Prāṇa vital wind is located within the heart and causes inhalation and exhalation. There is a desire for food and drink. At the centre of the anus, the Apāna vital wind exists. He causes contraction and checking. At the centre of the navel, the Samāna vital wind exists. He causes to absorb [substances from]\footnote{The verbal form \textit{śoṣayati} (causative third person singular indicative present of √śuṣ) means ``causes to dry up'' or ``causes to disappear''. In this context, however, a better idiomatic translation would be ``causes to absorb'', since the Samāna vital wind absorbs the eaten substances in the body and distributes it everywhere, cf. \citetitle{yajnavalkya} 4.55-57 (Ed. p. 40) and 4.69ab (Ed. p. 42).}  all the channels. In this way, the channels are caused to be nourished, appetite is caused to be generated, and the fire [of digestion] is caused to be kindled. Within the throat, the Udāna vital wind is situated. This wind swallows food, [and] it drinks water. The Vyāna vital wind exists in the entire body.\footnote{I have conjectured \textit{nāgavāyu} to \textit{vyānavāyu} based on the description provided in YSv (PT), as the latter term generally corresponds to the provided function of this vitalwind. Some witnesses, namely \getsiglum{B}, \getsiglum{E}, \getsiglum{L}, \getsiglum{P} and \getsiglum{U2} contain a nonsensical fragment, ``\textit{śokam āpnoti vikṛtaḥ}'', right after the description of the \textit{vāyu}. This fragment is likely a remnant of the original description of \textit{nāgavāyu} that was lost during transmission.} Through the vital wind, the body is caused to move. \textbf{\large{\sic{\ldots}}}\footnote{In the YSv (PT pp. 838-839), the order of the ten vital winds is as follows: Prāṇa, Apāna, Samāna, Udāna, Vyāna, Kūrma, Nāga, Kṛkāra, Devadatta, Dhanañjaya. In the SSP 1.67 (Ed. pp. 23-24): Prāṇa, Apāna, Samāna, Vyāna, Udāna, Nāga, Kūrma, Kṛkāra, Devadatta, Dhanañjaya. In both texts, which are the probable sources for Rāmacandra, the Vyāna vital wind appears to be within the group of the first five major vital winds. This group of five winds is undoubtedly common across yogic literature, cf. \citeauthor[2017: 187-198]{rootsofyoga2017}. The emergence of Nāga instead of Vyāna in the witnesses indicates a corruption of the transmission. The description of the function of the vital wind in this passage makes it likely that the term Vyāna was dropped and replaced with Nāga, and in turn, the description of the function of Nāga was lost. The odd and nonsensical phrase \textit{śokam āpnoti vikṛtaḥ} might be a remnant of this lost description of Nāga. YSv (PT pp. 838-839) reads: \textit{udgāre nāga ākhyātaḥ ūrddhavāyuḥ pracālane} | `When belching, it is called the Nāga vital wind that initiates the forward movement' and SSP 1.67 (Ed. pp. 23-24) reads: \textit{nāgavāyuḥ sarvāṅgavyāpakaḥ mocakaś cālakaś ca}, `The Nāga vital wind pervades all limbs of the body and is releasing and moving.' Based on these sources' readings, the passage's reconstruction must remain unsolved.} The Kūrma vital wind exists within the eyes. It causes [the] opening and closing [of the eyes].
+  Now, ten vital winds are situated within the body. Their functions are taught. The Prāṇa vital wind is located within the chest and performs inhalation and exhalation. It brings about the desire for food and drink. Within the anus, the Apāna vital wind is situated. It performs contraction and restraining. Within the navel, the Samāna vital wind exists. It causes to absorb [substances from]\footnote{The verbal form \textit{śoṣayati} (causative third person singular indicative present of √śuṣ) means ``causes to dry up'' or ``causes to disappear''. In this context, however, a better idiomatic translation would be ``causes to absorb'', since the Samāna vital wind absorbs the eaten substances in the body and distributes it everywhere, cf. \citetitle{yajnavalkya} 4.55-57 (Ed. p. 40) and 4.69ab (Ed. p. 42).} all the channels. In this way, it causes the channels to be nourished, causes appetite to be generated, and causes the [digestive] fire to be kindled. Within the palate, the Udāna vital wind is situated. This wind swallows food, [and] it drinks liquid. The Vyāna vital wind exists in the entire body.\footnote{I have conjectured \textit{nāgavāyu} to \textit{vyānavāyu} based on the description provided in YSv (PT), as the latter term generally corresponds to the provided function of this vital wind. Textcritically, however, this choice is difficult and not unambiguous, since according to SSP 1.67 (\textit{nāgavāyuḥ sarvāṅgavyāpakaḥ mocakaś cālakaś ca}), not just Vyāna (as in YSv) but also Nāga pervades the whole body, a concept also attested in \citetitle{vasisthasamhita} 2.49cd and 2.52cd. YSv (PT pp. 838-839) ascribes the function of belching (\textit{udgāra}) to Nāga (\textit{udgāre nāga ākhyātaḥ ūrddhavāyuḥ pracālane} |) which speaks for my conjecture. However, Rāmacandra follows the SSP 1.67 (Ed. pp. 23-24) by ascribing the function of belching to Kṛkala, even though the Ysv ascribes sneezing (\textit{kṣut}) to Kṛkala. This indicates that he mixed the descriptions of the YSv and SSP, which makes it possible that he followed the SSP in the case of Nāga, too. This leaves us with the other possibility that Vyāna and its description dropped out. However, in the YSv (PT pp. 838-839), the order of the ten vital winds is as follows: Prāṇa, Apāna, Samāna, Udāna, Vyāna, Kūrma, Nāga, Kṛkāra, Devadatta, Dhanañjaya. In the SSP 1.67 (Ed. pp. 23-24): Prāṇa, Apāna, Samāna, Vyāna, Udāna, Nāga, Kūrma, Kṛkāra, Devadatta, Dhanañjaya. In both sources, the Vyāna vital wind appears to be within the group of the first five major vital winds. This group of five winds is undoubtedly common across yogic literature, cf. \citeauthor[2017: 187-198]{rootsofyoga2017}. The emergence of Nāga instead of Vyāna in all the witnesses indicates a corruption of the transmission or a mistake by Rāmacandra. The description of the function of the vital wind in this passage makes it slightly more likely that the term \textit{vyāna} was dropped and replaced with \textit{nāga}. In turn, the original descriptions of the functions of the vital winds were further confused in the course of transmission.} Through the vital wind, the body is caused to move. When it is problematic it attains pain. The Kūrma vital wind exists within the eyes. It performs [the] opening and closing [of the eyes].%\textbf{\large{\sic{\ldots}}}
   \flushpage 
     \end{tlate}
   \end{translation}
@@ -1391,7 +1397,8 @@ sūryamaṇdala\app{\lem[wit={ceteri}, alt={°sadṛśaṃ}]{sadṛśaṃ}
 \note[type=source, labelb=183, nosep]{cf. YSv (PT p. 839): jvaladākāśatulyaṃvā bhāvayed rūpamātmanaḥ | etaj jyotirmayaṃ dehaṃ manomadhye tu lakṣayet |}
 svaśarīrapari\app{\lem[wit={ceteri},alt={°mitaṃ}]{mitaṃ}
   \rdg[wit={U1}]{°manomittaṃ}}
-tejo\app{\lem[wit={ceteri},alt={°mano}]{mano}
+tejo
+\app{\lem[wit={ceteri},alt={°mano}]{mano}
   \rdg[wit={U1}]{\om}
 }madhye
 \app{\lem[wit={D,P,N1,U1}]{lakṣyaṃ}
@@ -1455,7 +1462,7 @@ bhavati/ puruṣa ānandamayo bhūtvā tiṣṭhati\dd{}\linelabel{_181e}
   \begin{translation}
     \begin{tlate}[p26_02]
 \noindent
-From the Kṛkala vital wind gagging arises. From the Devadatta vital wind jawning arises. From the Dhanaṃjaya vital wind speech arises.
+From the Kṛkala vital wind belching arises. From the Devadatta vital wind yawning arises. From the Dhanañjaya vital wind sound arises.
 \end{tlate}
 \ekddiv{
   head={[\uproman{27}. \textbf{Central focus}]},
@@ -1464,8 +1471,8 @@ From the Kṛkala vital wind gagging arises. From the Devadatta vital wind jawni
   n=XXVII.1 
 }
 \begin{tlate}[p27_01]
-  Now, the central focus is taught. White-coloured or yellow-coloured or red-coloured or smoke-coloured or blue-coloured, like the flame of fire, equal to lightning, like the orb of the sun, like a crescent, appearing like flaming space, [and] according to the measure of one's own body, the focus shall be directed onto the centre of the glowing mind.\footnote{Cf. \citetitle{shivayogapradipika} 4.47cd-48: `(47cd) Hear now the central fixation which has been taught by the ancient sages. (48) One should focus at one [object] devoid of location or the burning space [emerging] from a sphere with flames and lightning shining (\textit{candra}) into [all] nine landmasses (of the continent Jambūdvīpa: Bhārata, Hari, Kimpuruṣa, Ramyaka, Ramaṇa, Kuru, Bhadrāśva, Ketumāla and Ilāvṛta) in the colours of white etc. Truly, this is the central fixation.' (\textit{śṛṇuṣva madhyalakṣyaṃ ca kathitaṃ pūrvasūribhiḥ} || 4.47 \textit{śvetādivarṇanavakhaṇḍacandrasaudāminīvahniśikhena bimbāt} | \textit{jvalannabho vā sthalahīnam ekaṃ vilakṣayet tat khalu madhyalakṣyam} 4.48 ||) Despite all similarities, the differences of the techniques are: In the \textit{Śivayogapradīpikā}, the practitioner should direct the mind towards the burning space or that which lacks locality. Conversely, Rāmacandra prescribes fixing one's mind onto the luminous mind, which is equated with the spatial extension of the human body. Therefore, Rāmacandra's practice can be conceptually situated much closer to Sundardās' elucidations.}
-  While abiding in the focus, the burning of impurity within the mind arises. The \textit{sattva} quality of the mind becomes revealed.\footnote{The generation of the sattvic quality through the practice of \textit{madhyalakṣ(y)a} also appears in \citetitle{sarvangayoga} 3.28: (\textit{madhya lakṣa mana madhya bicārai} | \textit{vapu pramāna koi rūpa nihārai} | \textit{yāte sātvik upajai āī} | \textit{madhya lakṣa jo sādhai bhāī} ||) ``The central focus directs the mind to reside at its centre, revealing the true form of the body. It produces the sattvic quality in those who practice it.''} After this has happened, the person abides in supreme bliss. 
+  Now, the central focus is taught. Within the mind the focus shall be directed onto the light which is white-coloured or yellow-coloured or red-coloured or grey-coloured or blue-coloured, like the flame of fire, equal to lightning, like the orb of the sun, like a half-moon, appearing like flaming space, [and] in the same size as one's own body.\footnote{Cf. \citetitle{shivayogapradipika} 4.47cd-48: `(47cd) Hear now the central fixation which has been taught by the ancient sages. (48) One should focus at one [object] devoid of location or the burning space [emerging] from a sphere with flames and lightning shining (\textit{candra}) into [all] nine landmasses (of the continent Jambūdvīpa: Bhārata, Hari, Kimpuruṣa, Ramyaka, Ramaṇa, Kuru, Bhadrāśva, Ketumāla and Ilāvṛta) in the colours of white etc. Truly, this is the central fixation.' (\textit{śṛṇuṣva madhyalakṣyaṃ ca kathitaṃ pūrvasūribhiḥ} || 4.47 \textit{śvetādivarṇanavakhaṇḍacandrasaudāminīvahniśikhena bimbāt} | \textit{jvalannabho vā sthalahīnam ekaṃ vilakṣayet tat khalu madhyalakṣyam} 4.48 ||) Despite all similarities, the differences of the techniques are: In the \textit{Śivayogapradīpikā}, the practitioner should direct the mind towards the burning space or that which lacks locality. Conversely, Rāmacandra prescribes fixing one's mind onto the luminous mind, which is equated with the spatial extension of the human body. Therefore, Rāmacandra's practice can be conceptually situated much closer to Sundardās' elucidations.}
+  When the focus is performed, the burning of impurity within the mind manifests. The \textit{sattva} quality of the mind becomes revealed.\footnote{The generation of the sattvic quality through the practice of \textit{madhyalakṣ(y)a} also appears in \citetitle{sarvangayoga} 3.28: (\textit{madhya lakṣa mana madhya bicārai} | \textit{vapu pramāna koi rūpa nihārai} | \textit{yāte sātvik upajai āī} | \textit{madhya lakṣa jo sādhai bhāī} ||) ``The central focus directs the mind to reside at its centre, revealing the true form of the body. It produces the sattvic quality in those who practice it.''} The person becomes blissfull and remains like that̤. 
   \flushpage 
 \end{tlate}
   \end{translation}
@@ -1504,12 +1511,12 @@ From the Kṛkala vital wind gagging arises. From the Devadatta vital wind jawni
   ]
   \begin{edition}
     \ekddiv{
-      head={[\uproman{28}. \textbf{ākaśabhedāḥ}]},
+      head={[\uproman{28}. \textbf{ākāśabhedāḥ}]},
       type=section,
       depth=2, 
       n=XXVIII
     }
-    \xmlhead[h28]{[XXVIII. ākaśabhedāḥ]}
+    \xmlhead[h28]{[XXVIII. ākāśabhedāḥ]}
 \begin{prose}[p28_01]
  \noindent
 %-----------------------------
@@ -1529,7 +1536,8 @@ From the Kṛkala vital wind gagging arises. From the Devadatta vital wind jawni
 \note[type=testium, labelb=186, labele=_185e, nosep]{cf. SSP 2.30 (Ed. p. 42): ākāśaṃ parākāśaṃ mahākāśaṃ tatvākaśaṃ sūryākāśam iti vyomapañcakam | bāhyābhyantare 'tyantaṃ nirmalaṃ nirākāraṃ ākāśaṃ lakṣayet |}
 \app{\lem[wit={E,P,U2},alt={idānīm}]{idānī\skp{m-ā}}
   \rdg[wit={ceteri}]{idānīṃ}
-}\skm{m-ā}kāśabhedāḥ
+}\app{\lem[wit={E,N2,U1,U2}, alt={ākāśabhedāḥ}]{\skm{m-ā}kāśabhedāḥ}
+  \rdg[wit={ceteri}]{ākaśabhedāḥ}}
 \app{\lem[wit={ceteri}]{kathyante}
   \rdg[wit={L,N2,U2}]{kathyate}}/
 %-----------------------------SSP!
@@ -1558,16 +1566,16 @@ From the Kṛkala vital wind gagging arises. From the Devadatta vital wind jawni
     \rdg[wit={B,L}]{\om}}/
 \app{\lem[wit={B,E,L,P}]{ākāśaḥ}
   \rdg[wit={X}]{ākāśa°}}\dd{}
-\app{\lem[wit={B,E,L}]{paramākāśaḥ}
-  \rdg[wit={P,U2}]{parākāśaḥ}
+\app{\lem[wit={P,U2}]{parākāśaḥ}
   \rdg[wit={N1}]{parākāśa}
-  \rdg[wit={D,N2,U1}]{parākāśa°}}\dd{}
+  \rdg[wit={D,N2,U1}]{parākāśa°}
+  \rdg[wit={B,E,L}]{paramākāśaḥ}}\dd{}
 \app{\lem[wit={E,L,P,U2}]{mahākāśaḥ}
   \rdg[wit={B,N1}]{mahākāśa}
   \rdg[wit={D,N2,U1}]{mahākāśa°}}\dd{}
-\app{\lem[wit={B,E,L,U2},alt={tattvakāśaḥ}]{tattvakāśaḥ}
-  \rdg[wit={N1}]{tatvakāśa}
-  \rdg[wit={D,N2,U1}]{tatvakāśa°}}\dd{}
+\app{\lem[wit={B,E,L,U2},alt={tattvakāśaḥ}]{tattvākāśaḥ}
+  \rdg[wit={N1}]{tatvākāśa}
+  \rdg[wit={D,N2,U1}]{tatvākāśa°}}\dd{}
 \app{\lem[wit={B,E,L}]{sūryākāśaḥ}
   \rdg[wit={N2,P,U2}]{sūryakāśaḥ}
   \rdg[wit={N1}]{sūryakāśa}
@@ -1648,8 +1656,8 @@ tataḥ
 }\app{\lem[wit={ceteri},alt={°nalapūrṇaṃ}]{nalapūrṇaṃ}
   \rdg[wit={N1,N2,U2}]{nalapūrṇa}}
 bāhyābhyantare
-\app{\lem[wit={ceteri},alt={mahākāśa°}]{mahākaśa}
-  \rdg[wit={D,P,U1}]{mahākāśaṃ}
+\app{\lem[wit={D,P,U1}]{mahākāśaṃ}
+  \rdg[wit={B,E,L,N1,N2}]{mahākaśa°}
   \rdg[wit={U2}]{ghanāṃ dhakārasadṛśaṃ mahākāśasya}
 }\app{\lem[wit={ceteri}, alt={°lakṣyaṃ}]{lakṣyaṃ}
   \rdg[wit={B,D,L,N2,U2}]{°lakṣaṃ}}
@@ -1676,7 +1684,7 @@ kartavyaṃ/\linelabel{_191e}
   \rdg[wit={E}]{\om}} 
 \app{\lem[wit={ceteri}]{yādṛśaṃ}
 \rdg[wit={E}]{\om}} 
-\app{\lem[wit={ceteri}, alt={aujvalyaṃ}]{aujva:\\lyaṃ}
+\app{\lem[wit={ceteri}, alt={aujjvalyaṃ}]{aujjvalyaṃ}
   \rdg[wit={L}]{ujvalaṃ}
   \rdg[wit={E}]{\om}} 
 \app{\lem[wit={ceteri}]{bhavati}
@@ -1705,7 +1713,7 @@ kartavyaṃ/\linelabel{_191e}
     \begin{tlate}[p28_01]
       \noindent
  Now, the divisions of space are taught.\footnote{The \citetitle{advaya} 7 (Ed. pp. 4-5) does not separate the practice of Madhyalakṣya from the five spaces. Here, both practices form a unified whole and follow a specific progression: `Now, he sees the characteristics of the central fixation [which is], like the indivisible orb of the sun, [being] colourful like the variety [of colours of the sun] in the early morning etc., [then] like a row of flames of fire, [and finally] the athmosphere devoid of that. He dwells in a state [in which he is mentally] assuming the form of the apparition of that. By [mentally] contemplating about that, the space (\textit{ākāśa}) without qualities arises. [From that] supreme space (\textit{parākāśa}) resembling absolute dense darkness shining in the form of a sparkling star arises. [From that] the great space (\textit{mahākāśa}) whose shine equals the fire of time arises. [From that] the space of reality (\textit{tattvakāśa}) arises, shining forth with supreme brilliance surpassing everything. [From that] the space of the sun (\textit{sūryākāśa}) arises [which is endowed with] a brilliance as powerful as mighty as the brilliance of ten million suns. Thus, the fixations of Tāraka[yoga] consist of five spaces (\textit{vyoma}) situated internally and externally. He who sees them becomes the same as such space [and] becomes one who is freed from the results [of his actions]. Because of that only Tāraka[yoga] is the central fixation which bestows the fruits of the no mind state (\textit{amanaska}).' (\textit{atha madhyalakṣyalakṣaṇaṃ} | \textit{prātaścitrādivarṇākhaṇḍasūryacakravat vahnijvālāvalīvat tadvihīnāntarikṣavat paśyati} | \textit{tadākārākāritayā avatiṣṭhati} | \textit{tadbhūyodarśanena guṇarahitākāśaṃ bhavati} | \textit{visphurattārakākāradīpyamānagāḍhatamopamaṃ paramākāśaṃ bhavati} | \textit{kālānalasamadyotamānaṃ mahākāśaṃ bhavati} | \textit{sarvotkṛṣṭaparamadyutipradyotamānaṃ tattvākāśaṃ bhavati} | \textit{koṭisūryaprakāśavaibhavasaṃkāśaṃ sūryākāśaṃ bhavati} | \textit{evaṃ bāhyābhyantarasthavyomapañcakaṃ tārakalakṣyam} | \textit{taddarśī vimuktaphalas tādṛgvyomasamāno bhavati} | \textit{tasmāt tāraka eva lakṣyaṃ amanaskaphalapradaṃ bhavati} || 7 ||)}
- The foci of them are taught: Space, beyond space, great space, space of reality, the space of the sun. The focus onto the pure and formless space (\textit{akāśa}) shall be done internally as well as externally. Therafter, the focus oto beyond-space (\textit{parākāśa}) which is equal to dense darkness\footnote{Instead of extreme brightness as in the \citetitle{ssplonavla} (Ed. p. 29) and \citetitle{advaya} (Ed. p. 5), Rāmacandra has chosen to promote dense darkness in his \textit{parākāśa}-visualization.} shall be done internally and externally. Then, the focus noto the great space (\textit{mahākāśa}) which is the plethora of the burning fire of the time of dissolution shall be done internally and externally. Then, when internally and externally the brightness of millions of blazing lights arises, he shall execute the focus onto the reality-space (\textit{tattvakāśa}) which is as such.
+ The foci of them are taught: Space, beyond space, great space, space of reality, the space of the sun. The focus onto space shall be visualized as pure and formless internally and externally. Therafter, the focus onto beyond-space shall be visualized as dense darkness\footnote{Instead of extreme brightness as in the \citetitle{ssplonavla} (Ed. p. 29) and \citetitle{advaya} (Ed. p. 5), Rāmacandra has chosen to promote dense darkness in his \textit{parākāśa}-visualization.} internally and externally. Then, the focus onto great space shall be visualized as the plethora of the burning fire of the time of dissolution internally and externally. Afterwards, such focus onto reality space should be visualized as that which resembles the splendour upon being fixed onto the brightness of ten million lights.
  \flushpage 
 \end{tlate}
   \end{translation}
@@ -1797,7 +1805,7 @@ kartavyaṃ/\linelabel{_191e}
 %-----------------------------
 %From the execution of these fixations contact of diseases does not arise within the body. 
 %-----------------------------
-\note[type=source, labelb=196, labele=_196e, nosep]{cf. YSv (PT p. 839): śivavad vihare dviśve pāpapuṇyavivarjitaḥ | eteṣāñ caiva lakṣeṇa karmadvārā 'ghamāharet (\textit{karmmadvārānapāharet} YK 2.41d) |}
+\note[type=source, labelb=196, labele=_196e, nosep]{cf. YSv (PT p. 839): śivavad vihared viśve pāpapuṇyavivarjitaḥ | eteṣāñ caiva lakṣeṇa karmadvārā 'ghamāharet (\textit{karmmadvārānapāharet} YK 2.41d) |}
 eteṣāṃ \app{\lem[wit={ceteri}]{lakṣyāṇāṃ}
   \rdg[wit={P}]{lakṣāṇāṃ}
   \rdg[wit={B}]{lakṣaṇaṃ}
@@ -1810,8 +1818,11 @@ eteṣāṃ \app{\lem[wit={ceteri}]{lakṣyāṇāṃ}
   \rdg[wit={D,N1}]{śarīra°}
   \rdg[wit={B,P,L,U2}]{śarīre}
   \rdg[wit={E}]{°śarīraṃ}}
-\app{\lem[wit={ceteri}, alt={rogāsaṃsargo}]{rogāsaṃsargo}
-  \rdg[wit={E}]{rogāsaṃsargi}}
+\app{\lem[wit={B,L,P}, alt={rogāsaṃsargo}]{rogasaṃsargo}
+  \rdg[wit={E}]{rogāsaṃsargi}
+  \rdg[wit={D}]{rohasaṃsargo}
+  \rdg[wit={N1}]{rohasaṃsarge}
+  \rdg[wit={N2,U1,U2}]{rogāsaṃsargo}}
 \app{\lem[wit={ceteri}]{na}
   \rdg[wit={E}]{\om}}
 \app{\lem[wit={ceteri}]{bhavati}
@@ -1900,7 +1911,7 @@ na jānāti sa yogī nāmadhārakaḥ\dd{} \begin{otherlanguage}{english}\uproma
   \begin{translation}
     \begin{tlate}[p28_02]
       \noindent
-      After that, the focus of the sun-space (\textit{sūryakāśa}), which is associated with the sun disc's appearance of light, shall be done internally and externally. From the execution of these foci, contact with diseases does not arise within the body. Thus wrinkles and grey hair, sin or merit do not arise.
+      After that, the focus onto sun-space (\textit{sūryākāśa}) shall be visualized as being accompanied with the shining of the disc of the sun internally and externally. From the execution of these foci, contact with diseases does not arise within the body. Thus wrinkles and grey hair, sin and merit do not arise.
     \end{tlate}
     \begin{tlate}[28_1]
 \paragraph{\uproman{28}. 1} The nine \textit{cakra}s,\footnote{A very detailled account of Rāmacandra's ninefold system of \textit{cakra}s is presented from \uproman{4} - \uproman{12}, pp. \pageref{cakra1} - \pageref{cakra9}. A shorter and rather redundant account of the system is found again in section \uproman{30}, cf. p.\pageref{cakrashort}. The reason for the renewed mention of the \textit{cakra}s is not apparent.}, sixteen supports\footnote{The sixteen supports of Rāmacandra are big toe support (\textit{pādāṅguṣṭhādhāra}), root support (\textit{mūlādhāra}), anus support (\textit{gudādhāra}), penis support (\textit{liṅgādhāra}), pleasance [support] (\textit{udyāna}), navel (\textit{nābhyādhāra}), heart-form support (\textit{hṛdayarūpādhāra}), throat (\textit{kaṇṭhādhāra}), uvula support (textit{ghaṃṭikādhāra}), palate support (\textit{tālvādhāra}), tongue support (\textit{jihvādhāra}), teeth support (\textit{dantādhāra}), nose (\textit{nāsikādhāra}), breath support at the root of the nose (\textit{nāsāmūle vāyvādhāra}), center of the eyebrows support (\textit{bhrūvormadhyādhāra}) and the eye support (\textit{netrādhāra}). Each one of them is associated with a particular yogic technique. The sixteen supports are treated in details in section \uproman{31}, pp. \pageref{sixteenstart}-\pageref{sixteenend}.}, the three foci\footnote{The three foci called \textit{antar(a)lakṣya}, \textit{bahirlakṣya} (often called \textit{bāhyalakṣya} in the \textit{pañcalakṣya} system of Rāmacandra and others) and \textit{madhyalakṣya} are the predecessors of the five foci found in \textit{Yogatattvabindu}, \textit{Yogasvarodaya} as quoted in \citetitle{ramatosana} and \citetitle{yogakarnika} and \citetitle{sarvangayoga}. The two additional foci are \textit{ūrdhvalakṣya} and \textit{adholakṣya}. A system of three foci is taught in \citetitle{tantraloka}, \citetitle{manthana}, \citetitle{netratantra}, \citetitle{fausta1976}, \citetitle{shivayogapradipika}, \citetitle{ssplonavla}, \citetitle{advaya}, \citetitle{yogacudamani}, \citetitle{mandalabrah}. Structurally, it is surprising that Rāmacandra mentions all five \textit{lakṣya}s in section \uproman{13}, then teaches \textit{ūrdhvalakṣya} in section \uproman{14} and \textit{adholakṣya} in section \uproman{15}, and just after the introduction of various other topics, he continues the subject of Lakṣyayoga by teaching \textit{bāhyalakṣya} in section \uproman{23}, \textit{antar(a)lakṣya} in section \uproman{24} and finally \textit{madhyalakṣya} in section \uproman{28}. The structural issues of the text are discussed in detail p. on \pageref{structure}.} and five spaces. Who does not know [them?] within ones own body, he is only a yogin by name.\footnote{As can be seen in the sources and testimonia on the previous page, the reception of this verse and the related practices is extremely widespread. They were transmitted from Śaiva Tantras such as \citetitle{tantraloka}, \citetitle{manthana} and \citetitle{netratantra}, across the early and classical literature of Haṭha- and Rājayoga (e.g. \citetitle{hathapradipika2024}), and from there into the post-\textit{Haṭhapradīpikā} era of the same genre, well into the late \citetitle{yogaupaniṣaded}. Most of the technical terms occur in even earlier Śaiva Tantras, such as in the \textit{Mālinīvijayottaratantra}, which, however, teaches a more elaborate but conceptually deviating system of six \textit{lakṣya}s, cf. (\citeauthor[2004: pp. 263-71]{vasudeva2004}), on the \textit{granthi}s, \textit{vyoma}s, \textit{lakṣya}s and \textit{cakra}s.}
@@ -2073,7 +2084,7 @@ brahma\app{\lem[wit={ceteri}, alt={°randhra°}]{randhra}
     \label{cakranukrama}
     \begin{tlate}[p29_01]
       \noindent
-      Now, the sequence of the \textit{cakra}s is taught.\footnote{Once again, Rāmacandra presents descriptions of the \textit{cakra}s, but this time, he only briefly mentions their names and locations. It is worth noting that these details were already extensively covered in chapters \uproman{4} to \uproman{12}. This repetition appears redundant. The only noteworthy differences are the more technical designations of the \textit{cakra}s, which were partially absent in the \textit{cakra} sections of the beginning of the text. From this point onwards, however, there appears to be a growing emphasis on the \citetitle{ssplonavla} as Rāmacandra's template source text.} At the support,\footnote{In the previous section on \textit{cakra}s Rāmacandra situates the first \textit{cakra}, which he there calls \textit{mūlacakra}, at the beginning (\textit{ādau}) [of supposedly the central channel], which should be at the anus if we assume an ascending order, cf. p.\pageref{cakra1}. This assumption is further supported by the additional descriptions of \getsiglum{U2} (folio 2v. l.2) in which it is explicitly located at the anus (\textit{gudasthānam}) and called \textit{ādhāracakra} (``\textit{cakra} of the support''). Thus, the location presented here as \textit{ādhāre} (``at the support'') should be understood as \textit{mūlādhāre} (``at the root-support'').} there is the Brahmacakra. Above the support at the root of the gender is the Svadiṣṭhānacakra. At the navel, there is the Maṇipūrakacakra. In the heart [there is] the Anāhatacakra. Situated within the throat is the Viśuddhicakra. The sixth is the Tālucakra. In the centre of the eyebrows is the Ājñācakra. At the opening of Brahman\footnote{The \textit{brahmarandhrasthāne} (``at the place of the aperture of Brahman'') is the fontanelle, through which the vital principle of the yogi exists at death, cf. \citeauthor[2017:438]{rootsofyoga2017}.} is the Kālacakra\footnote{I have not been able to identify the term \textit{kālacakra} (``\textit{cakra} of time'') for the eighth \textit{cakra} in other texts. All other texts that I am aware of designate the eighth \textit{cakra} in a ninefold \textit{cakra} system with different terms: \citetitle{peterson1888} 4359/256.13 calls it \textit{nirvāṇa°} (``absolute extinction''); \citetitle{shivayogapradipika} 3.15 also designates it with \textit{nirvāṇa°}; the \citetitle{ssplonavla} 2.8 again calls it the \textit{nirvāṇacakraṃ}; \textit{Yogasvarodaya} as quoted in \citetitle{ramatosana} (Ed. p. 833) only calls it \textit{aṣṭamaṃ cakraṃ} (``the eighth \textit{cakra}'') and \textit{siddhapuṃsaḥ sthalaṃ} (``place of the accomplished human''); Rāmacandra himself in the previous chapter on \textit{cakra}s in \uproman{11}. l. 1 picks this up and calls it \textit{aṣṭamacakraṃ} (``eighth \textit{cakra}'') and \textit{siddhapuruṣasya sthānaṃ} (``place of the accomplished person''); \textit{Yogasaṃgraha} (IGNCA 30020 folio 2r. ll. 2-3) calls it \textit{siddhapuruṣasyānacakraṃ} (``the \textit{cakra} of the accomplished person''); \citetitle{saubhagya} again calls it \textit{nirvāṇacakram}, but provides us with yet another unique designation - \textit{parabrahmacakram} (``\textit{cakra} of the supreme Brahman'').} The ninth is the Ākāśacakra\footnote{The term \textit{ākāśacakra} for the ninth \textit{cakra} in the known ninefold \textit{cakra} systems occurs in \citetitle{shivayogapradipika} 3.16 and \citetitle{ssplonavla} 2.9 only}. It is supreme emptiness.
+      Now, the sequence of the \textit{cakra}s is taught.\footnote{Once again, Rāmacandra presents descriptions of the \textit{cakra}s, but this time, he only briefly mentions their names and locations. It is worth noting that these details were already extensively covered in chapters \uproman{4} to \uproman{12}. This repetition appears redundant. The only noteworthy differences are the more technical designations of the \textit{cakra}s, which were partially absent in the \textit{cakra} sections of the beginning of the text. From this point onwards, however, there appears to be a growing emphasis on the \citetitle{ssplonavla} as Rāmacandra's template source text.} At the base,\footnote{In the previous section on \textit{cakra}s Rāmacandra situates the first \textit{cakra}, which he there calls \textit{mūlacakra}, at the beginning (\textit{ādau}) [of supposedly the central channel], which should be at the anus if we assume an ascending order, cf. p.\pageref{cakra1}.} there is the Brahmacakra. Above the base at the root of the penis is the Svadiṣṭhānacakra. At the navel, there is the Maṇipūrakacakra. In the heart [there is] the Anāhatacakra. Situated within the throat is the Viśuddhicakra. The sixth is the Tālucakra. In the centre of the eyebrows is the Ājñācakra. At the opening of Brahman\footnote{The \textit{brahmarandhrasthāne} (``at the place of the aperture of Brahman'') is the fontanelle, through which the vital principle of the yogi exists at death, cf. \citeauthor[2017:438]{rootsofyoga2017}.} is the Kālacakra\footnote{I have not been able to identify the term \textit{kālacakra} (``\textit{cakra} of time'') for the eighth \textit{cakra} in other texts. All other texts that I am aware of designate the eighth \textit{cakra} in a ninefold \textit{cakra} system with different terms: \citetitle{peterson1888} 4359/256.13 calls it \textit{nirvāṇa°} (``absolute extinction''); \citetitle{shivayogapradipika} 3.15 also designates it with \textit{nirvāṇa°}; the \citetitle{ssplonavla} 2.8 again calls it the \textit{nirvāṇacakraṃ}; \textit{Yogasvarodaya} as quoted in \citetitle{ramatosana} (Ed. p. 833) only calls it \textit{aṣṭamaṃ cakraṃ} (``the eighth \textit{cakra}'') and \textit{siddhapuṃsaḥ sthalaṃ} (``place of the accomplished human''); Rāmacandra himself in the previous chapter on \textit{cakra}s in \uproman{11}. l. 1 picks this up and calls it \textit{aṣṭamacakraṃ} (``eighth \textit{cakra}'') and \textit{siddhapuruṣasya sthānaṃ} (``place of the accomplished person''); \textit{Yogasaṃgraha} (IGNCA 30020 folio 2r. ll. 2-3) calls it \textit{siddhapuruṣasyānacakraṃ} (``the \textit{cakra} of the accomplished person''); \citetitle{saubhagya} again calls it \textit{nirvāṇacakram}, but provides us with yet another unique designation - \textit{parabrahmacakram} (``\textit{cakra} of the supreme Brahman'').} The ninth is the Ākāśacakra\footnote{The term \textit{ākāśacakra} for the ninth \textit{cakra} in the known ninefold \textit{cakra} systems occurs in \citetitle{shivayogapradipika} 3.16 and \citetitle{ssplonavla} 2.9 only}. It is supreme emptiness.
       \flushpage
     \end{tlate}
   \end{translation}
@@ -2334,7 +2345,7 @@ sthiro
       The root support is the second [one]. The heel of the other foot is caused to be placed at the big toe joint (\textit{pādasyāṅguṣṭhamūla})\footnote{I suggest to understand the terms \textit{pādasyāṅguṣṭhamūla} as the big toe joint or \textit{articulatio metatarsophalangealis hallucis}.}. As a result, the fire is strengthened. One heel is caused to be placed at the root-container. The heel of the other foot is caused to be placed at the root of the big toe of this foot. The fire of it is caused to be kindled.\footnote{\textit{Netroddyota}, \citetitle{sarada} and \citetitle{jyotsna} give the ankle (\textit{gulpha}) as the second \textit{adhāra}.}
       
       The third is the location of the anus support. As a result of of expansion and contraction, a stable vital wind arises. 
- %     \flushpage 
+      \flushpage 
     \end{tlate}
   \end{translation}
 \end{alignment}
