--- a/intro.tex
+++ b/intro.tex
@@ -444,7 +444,7 @@ The third main category is \textit{Kriya Dhyana Yoga}, which is intended to incl
 
 The fourth main category is \textit{Kriya Mantra Yoga}. This involves the recitation or murmuring (\textit{japa}) of mantras discovered by the Siddhas. The recitation of mantras must take place with faith, love and concentration.
 
-\citeauthor{govindan2010} calls the fifth category \textit{Kriya Bhakti Yoga}, the yoga of love and devotion. In \citeauthor{govindan2010}'s words, this is the ``turbojet'' of self-realisation. This type of Kriyāyoga includes devotional love, chanting, ritual worship and pilgrimages to holy places.
+\citeauthor{govindan2010} calls the fifth category \textit{Kriya Bhakti Yoga}, the yoga of love and devotion. In \citeauthor{govindan2010}'s words, this is the ``turbojet'' of self-realisation. This type of Kriyāyoga includes devotionallove, chanting, ritual worship and pilgrimages to holy places.
 
 Furthermore, \textit{Kriya Karma Yoga} is named as the sixth category. In this case he refers to \citetitle{kaushik1993} II.47 f. and thus defines this subtype as selfless service that is performed consciously. All actions are supposed to be performed without the expectation of receiving anything in return, free from anger, selfishness, greed and personal desires. Thus, the practitioner is meant to examine his motivation before every action and is always supposed to act without selfish motives.
 
@@ -486,7 +486,7 @@ This first form of Jñānayoga in the \textit{Yogasvarodaya}, like much of its c
 The Jñānayoga of the second passage\footnote{\textit{Prāṇatoṣiṇī}, Ed. p. 835-837.} is almost identical with Rāmacandra's Jñānayoga. Rāmacandra adopts most of the verses verbatim from the \textit{Yogasvarodaya}. There are minor details that Rāmcandra modifies, but they do not significantly change the concept and aim of Jñānayoga. A slight simplification of the presentation can be observed. 
 
 \subsection{Jñānayoga in the \textit{Yogasiddhāntacandrikā}}
-
+\label{jnanayogaintrocandrika}
 Nārāyaṇatīrtha situates his Jñānayoga \footnote{For an earlier brief discussion of Jñānayoga in Nārāyaṇatīrtha's \textit{yogacandrika} see \citeauthor{penna2004}, 2004: 76.} in the context of \citetitle{yogasutra}'s \textit{sūtra} 1.28, which says:
 \begin{quote} \textit{taj japas tadarthabhāvanam} || 28 || \end{quote}
 \begin{quote} It's low-voice muttering; contemplation of its meaning. \end{quote}
@@ -495,9 +495,9 @@ This is the last \textit{sūtra} of an extensive section (1.23 - 1.28) in the \c
 
 Īśvara is most aptly represented by the sacred syllable \textit{auṃ}. The above \textit{sūtra} instructs the quiet murmuring of this syllable while contemplating its meaning (\textit{tadarthabhāvanam}) as a practical method of \textit{īśvarapraṇidhāna} to attain the highest state of Yoga, which is called \textit{asaṃprajñātasamādhi}.
 
-In this context, Nārāyaṇatīrtha explains that in this \textit{sūtra}, the term `low-voice muttering' (\textit{japa}) refers to the practice of Mantrayoga. The term 'contemplating its meaning' (\textit{arthabhavana}) refers to Jñānayoga as a form of practice that cultivates discriminating knowledge (see previous paragraph). Furthermore, in this context, Nārāyaṇatīrtha refers to Advaitayoga, also associated with this \textit{sūtra}, which is a form of Yoga characterised by the view of the non-differentiation of the individual self and the supreme self.\footnote{Cf. \textit{Yogasiddhāntacandrikā} Ed. p. 46: 'Furthermore, by the term \textit{japa}, the practice of Mantrayoga is indicated; by '\textit{arthabhavana},' the knowledge of discrimination, the form of practice [called] Jñānayoga, and Advaitayoga is the form of cultivating non-differentiation. (\textit{kiñca japa ity anena mantrayogaḥ arthabhāvanam ity anena vivekajñānā 'bhyāsarūpo jñānayogaḥ abhedabhāvarūpo 'dvaitayogaś ca saṃgṛhītaḥ} |).}
+In this context, Nārāyaṇatīrtha explains that in this \textit{sūtra}, the term `low-voice muttering' (\textit{japa}) refers to the practice of Mantrayoga. The term 'contemplating its meaning' (\textit{arthabhavana}) refers to Jñānayoga as a form of practice that cultivates discriminating knowledge (see previous paragraph). Furthermore, in this context, Nārāyaṇatīrtha refers to Advaitayoga, also associated with this \textit{sūtra}, which is a form of Yoga characterised by the view of the non-differentiation of the individual self and the supreme self.\footnote{Cf. \textit{Yogasiddhāntacandrikā} Ed. p. 46: 'Furthermore, by the term `\textit{japa}', the practice of Mantrayoga is indicated; by '\textit{arthabhavana},' the knowledge of discrimination, the form of practice [called] Jñānayoga, and Advaitayoga is the form of cultivating non-differentiation. (\textit{kiñca japa ity anena mantrayogaḥ arthabhāvanam ity anena vivekajñānā 'bhyāsarūpo jñānayogaḥ abhedabhāvarūpo 'dvaitayogaś ca saṃgṛhītaḥ} |).}
 
-Nārāyaṇatīrtha, thus, offers two alternatives about the specific performance of the contemplation. Either, while quietly murmuring the \textit{praṇava} syllable, which symbolises Īśvara and his qualities, attention is supposed to be focused on the distinction between consciousness (\textit{puruṣa}) and primordial nature (\textit{prakṛti}) including its effects (\textit{tatkārya}).\footnote{Cf. \textit{Yogasiddhāntacandrikā} Ed. p. 45: `The low-voice muttering of \textit{praṇava} [and] pronunciation according to the rules [along with] the contemplation of the meaning of that \textit{praṇava}, [being associated with] the Supreme Self endowed with inconceivable power and supremacy, is the fixation of the attention with discernment from the individual self and nature with its effects.' (\textit{tasya praṇavasya japaḥ vidhivad uccāraṇaṃ, tadarthasya praṇavārthasya acintyaiśvaryaśaktiyuktasya paramātmano bhāvanaṃ prakṛtitatkāryapuruṣebhyo vivekenānusaṃdhānam}).} This is Nārāyaṇatīrtha's Jñānayoga. Alternatively, one is supposed to reflect on the non-difference between the highest self (\textit{paramātman}) and the individual self (\textit{jīva}).\footnote{Cf. ibid.: `Alternatively, its meaning is the repeated imprinting in the mind of the non-distinction between the individual self and the total supreme self.' (\textit{athavā tadarthasya paramātmanaḥ pūrṇasya bhāvanaṃ jīvābhedena punaḥ punaś cetasi niveśanam |}).} This is Nārāyaṇatīrtha's Advaitayoga.
+Nārāyaṇatīrtha, thus, offers two alternatives about the specific performance of the contemplation. Either, while quietly murmuring the \textit{praṇava} syllable, which symbolises Īśvara and his qualities, attention is supposed to be focused on the distinction between consciousness (\textit{puruṣa}) and primordial nature (\textit{prakṛti}) including its effects (\textit{tatkārya}).\footnote{Cf. \textit{Yogasiddhāntacandrikā} Ed. p. 45: `The low-voice muttering of \textit{praṇava} [and] pronunciation according to the rules [along with] the contemplation of the meaning of that \textit{praṇava}, [being associated with] the Supreme Self endowed with inconceivable power and supremacy, is the fixation of the attention with discernment from the individual self and nature with its effects.' (\textit{tasya praṇavasya japaḥ vidhivad uccāraṇaṃ, tadarthasya praṇavārthasya acintyaiśvaryaśaktiyuktasya paramātmano bhāvanaṃ prakṛtitatkāryapuruṣebhyo vivekenānusaṃdhānam}).} This is Nārāyaṇatīrtha's Jñānayoga. Alternatively, one is supposed to reflect on the non-difference between the highest self (\textit{paramātman}) and the individual self (\textit{jīva}).\footnote{Ibid. (Ed. p. 45): `Alternatively, its meaning is the repeated memorization in the mind of the non-distinction between the individual self and the total supreme self.' (\textit{athavā tadarthasya paramātmanaḥ pūrṇasya bhāvanaṃ jīvābhedena punaḥ punaś cetasi niveśanam |}).} This is Nārāyaṇatīrtha's Advaitayoga.
 
 \subsection{Jñānayoga in the \textit{Sarvāṅgayogapradīpikā}}
 
@@ -780,6 +780,7 @@ Below, Nārāyaṇtīrtha's commentary offers two alternative explanations of dh
 
 \begin{quote}
   \textit{yatheti} | \textit{kim bahunā, harirāmādirūpaṃ parameśvaraṃ bāhyaṃ candrasūryādijyotir vā yad eveṣṭaṃ tad eva dhyāyet} | \textit{tasmād api dhyānāl labdhasthitikasya cittasya sādhanāntaraṃ vināpi kevale paramātmani sthitau yogyatā bhavatīty arthaḥ} | \textit{ayam eva dhyānayoga ukto yogagrantheṣu} |\\
+  
   \textit{vinā deśādibandhena vṛttir yā 'bhimate sthirā} |\\
   \textit{dhyānayogo bhaved eva cittacāñcalyanāśakaḥ} ||\\
     \textit{ity ādinā} | 
@@ -812,11 +813,11 @@ Although Dhyānayoga, as already mentioned at the beginning, is mentioned in bot
 \section{8. Mantrayoga}
 \label{dhyānayogaintro}
 
-Mantrayoga nimmt in der Taxonomie des \textit{Yogatattvabindu} die achte Position ein, die sechste Position im \textit{Yogasvarodaya}, die fünfte Position in der \textit{Yogasiddhāntacandrikā} und steht an zweiter Stelle der zwölf Yogas der \textit{sarvāṅgayogapradīpikā}. Mantrayoga wird von Sundardās dem Bhaktiyoga zugerodnet.
+Mantrayoga occupies the eighth position in the taxonomy of the \textit{Yogatattvabindu}, the sixth position in the \textit{Yogasvarodaya}, the fifth position in the \textit{Yogasiddhāntacandrikā} and is in the second place of the twelve yogas of the \textit{sarvāṅgayogapradīpikā}. Mantrayoga is attributed to Bhaktiyoga by Sundardās.
 
 \subsection{Mantrayoga in the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}}
 
-Abgesehen von der Erwähnung von Mantrayoga in den ersten Versen der Zitate des \textit{Yogasvarodaya} in der \textit{Prāṇatoṣinī}\footnote{Cf. \emph{Prāṇatoṣinī} Ed. p. 831 quoted with reference \textit{yogasvarodaye}.} beinhalten die uns erhaltenen und vorliegenden Zitate weder eine Beschreibung von Mantrayoga noch die Beschreibung einer Yogapraxie die \textit{mantra}s beinhaltet. Im \textit{Yogatattvabindu} hingegen, fällt der Begriff Mantrayoga in Sektion \uproman{3} erneut:
+Apart from the mention of Mantrayoga in the first verses of the quotations of the \textit{Yogasvarodaya} in the \textit{Prāṇatoṣinī}\footnote{Cf. \emph{Prāṇatoṣinī} ed. p. 831 quoted with reference \textit{yogasvarodaye}.} the quotations we have at hand contain neither a description of Mantrayoga nor a description of a Yoga practice that includes \textit{mantra}s. In the \textit{Yogatattvabindu}, however, the term Mantrayoga appears again in section \uproman{3}:
 
 \begin{quote}
   \textit{idānīṃ rājayogasya bhedāḥ kathyante} | \textit{ke te} | \textit{ekaḥ siddhakuṇḍalinīyogaḥ mantrayogaḥ amū rājayogau kathyete} |
@@ -825,11 +826,11 @@ Abgesehen von der Erwähnung von Mantrayoga in den ersten Versen der Zitate des 
   Now, varieties of Rājayoga are described. Which are these? One is Siddhakuṇḍalinīyoga and one is Mantrayoga. These two Rājayogas are described [in the following].
 \end{quote}
 
-Hierauf folgt eine Erklärung der drei primären Kanäle des yogischen Körpers: Iḍā, Piṅgalā und Suṣumnā. Die Sektion schließt mit der Erklärung, dass die [übende] Person allwissend wird, sobald das Wissen über den zentralen Kanal hervorgebracht wurde. In den darauffolgenden Sektionen \uproman{4}-\uproman{12} wird dann ein System bestehend aus insgesamt neun \textit{cakra}s beschrieben.
+This is followed by an explanation of the three primary channels of the yogic body: Iḍā, Piṅgalā and Suṣumnā. The section concludes with the assertion that the practitioner becomes omniscient once knowledge about the central channel is generated. In the following sections (\uproman{4}-\uproman{12}), a system consisting of a total of nine \textit{cakra}s is then described.
 
-Aus textkritischer Perspektive ist diese Passage auffällig und problematisch. Ein Grund dafür ist, dass Rāmancandra sich in der ersten Hälfte seines Textes und auch weitestgehend in der zweiten Hälfte strukturell und inhaltlich sehr an seiner Vorlage, der \textit{Yogasvarodaya} orientiert. Das \textit{Yogasvarodaya} nennt hier jedoch \textit{jñānayoga} anstatt \textit{siddhakuṇḍalinīyogaḥ mantrayogaḥ} liest. Inhaltlich ähnelt der Rest des Abschnittes wie gewohnt sehr stark der \textit{Yogasvarodaya}. Die Handschriften bieten für die auffällige Passage allerdings keine Alternativen, sodass bis auf Weiteres der Text akzeptiert werden muss. Ein weiterer Grund ist die seltsam anmutende Satzkonstruktion, welche jedoch, kennt man den Rest des Textes, schlussendlich doch nicht überrascht und daher akzeptiert werden kann. Der Leser hätte sich hier im Anschluss zumindest ein \textit{ca} (``und'') gewünscht. Allein Handschrift \getsiglum{L} lässt den Begriff \textit{mantrayogaḥ} aus, bewahrt aber die nachfolgenden Dualformen, sodass dies auch keine Lösung ist.    
+This passage is problematic from a text-critical perspective. Rāmancandra is very much orientated towards his textual source, the \textit{Yogasvarodaya}, in terms of structure and content, particularly in the first half of his text and mainly in the second half. However, the \textit{Yogasvarodaya} specifies \textit{jñānayoga} instead of \textit{siddhakuṇḍalinīyoga mantrayogaḥ}. As usual, the remainder of the section is very similar in content to the \textit{Yogasvarodaya}. However, the manuscripts offer no alternatives for the conspicuous passage, so the text must be accepted for now. Another reason is the seemingly strange sentence construction, which is ultimately unsurprising if one knows the rest of the text and can be accepted. Right after the term \textit{mantrayogaḥ}, the reader would have wished for a \textit{ca} (``and''). Only the manuscript \getsiglum{L} omits the term \textit{mantrayogaḥ} but preserves the following dual forms, so this is not a solution either.    
 
-Das erstgenannte \textit{cakra} namens \textit{mūlacakra} wird mit folgender Einleitung versehen:
+The first \textit{cakra} named \textit{mūlacakra} is provided with the following introduction:
 
 \begin{quote}
   \textit{idānīṃ suṣumṇāyāḥ jñānotpattāv upāyāḥ kathyante} | \textit{ādau caturdalaṃ mūlacakraṃ vartate} | 
@@ -838,10 +839,10 @@ Das erstgenannte \textit{cakra} namens \textit{mūlacakra} wird mit folgender Ei
   Now, the means for the genesis of knowledge of the central channel is described. At the beginning [of the central channel] exists the four-petalled root-cakra.
   \end{quote}
 
-  Anhand dieser Beschreibung kann nur davon ausgegangen werden, dass die Sektionen \uproman{4}-\uproman{12}, welche die neun \textit{cakra}s beschreiben, von Rāmacandra dem Siddhakuṇḍalinīyoga und Mantrayoga zugeordnet werden. Fast alle Handschriften, abgesehen von Handschrift \getsiglum{U2}, lassen jedoch in diesem Kontext keinen Rückschluss auf eine Praxis zu, die als Mantrayoga bezeichnet werden könnte zu.
+  On the basis of this description, it can only be assumed that the sections \uproman{4}-\uproman{12} describing the nine \textit{cakra}s are assigned by Rāmacandra to Siddhakuṇḍalinīyoga and Mantrayoga. However, almost all manuscripts, with the exception of the \getsiglum{U2} manuscript, do not allow any conclusions to be drawn in this context about a practice that could be described as Mantrayoga.
 
-  Die Handschrift \getsiglum{U2} enthält allerdings ausführliche zusätzliche Passagen, welche das Problem lösen und eine Praxis, die als Mantrayoga bezeichnet werden kann, ergänzt. Für jedes \textit{cakra} instruieren alle Handschriften \textit{dhyāna} auf das jeweile \textit{cakra}. Handschrift \getsiglum{U2}, enthält neben diversen zusätzlichen Details, immer jeweils eine Angabe für die Dauer der Meditation, die unter anderem\footnote{Die \textit{cakra}s erhalten zusätzlich, die gleiche Zeitangabe gemessen in \textit{ghaṭi}s, \textit{pala}s und \textit{akṣara}s. Siehe \citeauthor{birch2013} 2013: 265, n. 46.} in \textit{ajapājapa}s (``Die Rezitationen des Nichtrezitierten.'') gemessen wird. Schließlich wird dann anhand des zusätzlichen Materials zu Sektion \uproman{11} von Handschrift \getsiglum{U2} klar, dass hiermit das sog. \textit{ajapā mantra} bzw. \textit{haṃsa mantra}\footnote{Wahrscheinlich erstmals in der Yogaliteratur gelehrt in \citetitle{vivekamartandaolda} 28-30.} gemeint sein muss:
-
+  However, the manuscript \getsiglum{U2} contains detailed additional passages that solve the problem and supplement a practice that can be described as Mantrayoga. For each \textit{cakra}, all manuscripts instruct \textit{dhyāna} on the respective \textit{cakra}. Manuscript \getsiglum{U2}, in addition to various additional details, always contains an indication of the duration of the meditation, which is measured in \textit{ajapājapa}s (``The recitations of the non-recited.'').\footnote{The \textit{cakra}s additionally receive the same time indication measured in \textit{ghaṭi}s, \textit{pala}s and \textit{akṣara}s. See \citeauthor{birch2013} 2013: 265, n. 46}. Finally, the additional material in section \uproman{11} of manuscript \getsiglum{U2} makes it clear that the so-called \textit{ajapā mantra} or \textit{haṃsa mantra} must be meant here:\footnote{Probably first taught in the Yoga literature in \citetitle{vivekamartandaolda} 28-30}.
+    
   \begin{quote}
     \textit{sakāreṇa bahir yāti hakāreṇa viśet punaḥ} |\\  
     \textit{haṃsaḥ so 'haṃ tato mantraṃ jīvo japati sarvadā} ||
@@ -850,12 +851,36 @@ Das erstgenannte \textit{cakra} namens \textit{mūlacakra} wird mit folgender Ei
 With the sound ``sa'', he exhales. With the sound ``ha'', he inhales again: ``I am he, he is I''. Because of that, the embodied soul constantly utters the Mantra.
 \end{quote}
 
-Das \textit{ajapā mantra} (``unmuttered Mantra'') besteht aus dem beiden Silben \textit{haṃ} und \textit{saḥ} entsprechend der phonologischen Assoziation mit dem Klang der Ein- und Ausatmung. Weil alle Lebewesen ein- und ausatmen, heißt es, rezitieren die das \textit{ajapā mantra} ununterbrochen Tag und Nacht. Gleichzeitig ist \textit{haṃsaḥ} eine berühmte und uralte Metapher für die Seele, welche druch das Rad des Brahman oder Saṃsāra wandert.\footnote{Siehe \citetitle{hauschild1927} 1.6 und 3.18.} 
+The \textit{ajapā mantra} (``unmuttered mantra'') consists of the two syllables \textit{haṃ} and \textit{saḥ} according to the phonological association with the sound of inhalation and exhalation. Because all living beings inhale and exhale, they recite the \textit{ajapā mantra} continuously day and night. At the same time, \textit{haṃsa}, best translated as "swan" or "goose" in English, is a famous and ancient metaphor for the soul travelling through the wheel of Brahman or Saṃsāra.\footnote{See \citetitle{hauschild1927} 1.6 and 3.18.} Sometimes this mantra is also specified as \textit{ajapā gāyatrī}.\footnote{The \textit{ajapā} can be seen as a yogic appropriation of the Vedic \textit{gāyatrīmantra} (\citetitle{rootsofyoga2017} 2017, 134).}  
 
-Manchmal wird dieses Mantra auch \textit{ajapā gāyatrī} genannt.\footnote{Das \textit{ajapā} als eine yogische Aneignung des vedischen \textit{gāyatrīmantra}s gesehen werden (\citetitle{rootsofyoga2017} 2017, 134).}  
+Manuscript \getsiglum{U2} explains that the total daily number of all silent recitations of the \textit{haṃsa mantra} is 21600.\footnote{The number of total breaths is based on the assumption of an average breath duration of four seconds. Each day has 86400 seconds. If one divides this total number by four, one gets the 21600 breaths of the \textit{ajapā mantra}. \citeauthor{birch2013} (2013, 265, n. 46) argues that this assumption comes from \citetitle{svacchandatantra} 7.54-55. In addition to the \getsiglum{U2} manuscript of \textit{Yogatattvabindu}, this yogic axiom is widely used in Sanskrit Yoga literature. See for example \citeauthor{amaraughaprabodha} 58, Hemacandra's \citetitle{hemacandras} 5.232, \textit{Vivekamārtaṇḍa} 46, \textit{Gheraṇḍasaṃhitā} 5.79, \textit{Dhyānabindūpaniṣad} 62ab-63ab or \citetitle{jogpradipyaka} 913.} The association of the term Mantrayoga with the practice of \textit{haṃsa mantra} is widespread in Sanskrit Yoga literature.\footnote{See e.g. \citetitle{yogabija} 147; \citetitle{shivayogapradipika} 2.26-27 and 2. 29-32 (\citeauthor{shivayogapradipikax} (2023: 205), explains that here, however ``mantra is reframed and interiorised within a \textit{prāṇāyāma} environment, specifically in the form of the \textit{ajapā}, the "unuttered" mantra''); \emph{yogacintamani} (Ed. p. 12); \citetitle{hathatattvakaumudi} 55.28; and \citetitle{yogasikhopanisad} 132.}
 
-Handschrift \getsiglum{U2} erklärt, dass die tägliche Gesamtzahl aller stillen Rezitatonen des \textit{haṃsa mantra}s 21600 beträgt\footnote{Die Anzahl der Gesamtatemzüge basiert auf der Annahme einer durschnittlichen Atemzugdauer von vier Sekunden. Jeder Tag hat 86400 Sekunden. Teilt man diese Gesamtzahl durch vier erhält man die besagten 21600 Atemzüge des \textit{ajapā mantra}. \citeauthor{birch2013} (2013, 265, n. 46) argumentiert, dass diese Annahme aus \citetitle{svacchandatantra} 7.54-55 stammt. Neben der Handschrit \getsiglum{U2} des \textit{Yogatattvabindu} ist dieses yogische Axiom in der Sanskrit Yogaliteratur weit verbreitet. Siehe z.B. \citeauthor{amaraughaprabodha} 58, Hemacandra’s \citetitle{hemacandras} 5.232, \textit{Vivekamārtaṇḍa} 46, \textit{Gheraṇḍasaṃhitā} 5.79, \textit{Dhyānabindūpaniṣad} 62ab-63ab oder \citetitle{jogpradipyaka} 913.} Die Assoziation des Begriffes Mantrayoga mit der Praxis des \textit{haṃsa mantra} ist in der Sanskrit Yogaliteratur weit verbreitet.\footnote{Siehe z.B. \citetitle{yogabija} 147; \citetitle{shivayogapradipika} 2.26-27 and 2.29-32 (\citeauthor{shivayogapradipikax} (2023: 205), explains that here, however ``mantra is reframed and interiorized within a \textit{prāṇāyāma} environment, specifically in the form of the \textit{ajapā}, the “unuttered” mantra''); \emph{yogacintamani} (Ed. p. 12); \citetitle{hathatattvakaumudi} 55.28; and \citetitle{yogasikhopanisad} 132.}
+From a text-critical perspective, there is ambivalent evidence regarding the authenticity of the passages under discussion. All manuscripts mention Mantrayoga in the above passage. We must, therefore, assume that Mantrayoga was originally and perhaps even deliberately specified here by Rāmacandra, even if, or precisely because, he reads the source text differently. The fact that only the manuscript \getsiglum{U2} explicitly teaches a Mantrayoga must make one suspicious. This manuscript only contains additional material in the sections \uproman{4}-\uproman{12}. The most likely scenario is that the scribe of the manuscript \getsiglum{U2} made these additions to provide the missing explanations on Mantrayoga.\footnote{The connection between Siddhakuṇḍalinīyoga and Mantrayoga established in \getsiglum{U2} is found in a similar form in \citetitle{sarada} 25.37ab: `The \textit{kuṇḍalī} Śakti abides in the \textit{haṃsaḥ} [and] supports the [individual] Self.' (\textit{bibharti kuṇḍalī śaktir ātmānaṃ haṃsaṃ āśritā} |), see \citeauthor[2011: pp. 218, 228]{saradatilakafull}.} Manuscript \getsiglum{U2} belongs to the \beta group of manuscripts, which often contains poorer readings in a large part of the text than the \alpha group with the oldest manuscript \getsiglum{N1}. This also makes the other scenario seem far less likely at first, namely that \getsiglum{U2}, despite its later dating, transmits a more original text than all other textual witnesses. However, the oldest manuscript \getsiglum{N1} has immense gaps, at least in the last third of the text. On the other hand, manuscript \getsiglum{U2} is complete here, together with some candidates of the \beta-group. Furthermore, only manuscript \getsiglum{U2} preserves the correct variant of the sentence \begin{quote} \textit{bhuktimuktidā śivarūpiṇī suṣumṇānāḍī pravartate} | \textit{asyā jñānotpattau satyāṃ puruṣaḥ sarvajño bhavati} | \end{quote} in section \uproman{3}. Therefore, the additions of \getsiglum{U2} were printed in greyscale in the edition and not relegated to a footnote.
 
-Aus textkritischer Perspektive gibt es hinsichtlich der Authentizität der besprochenen Passagen ambivalente Evidenz. Alle Handschriften erwähnen Mantrayoga in der oben angeführten Passage. Wir müssen demnach davon ausgehen, dass Mantrayoga hier ursprünglich und vielleicht sogar bewusst von Rāmacandra genannt wurde, auch wenn, oder gerade weil, der die Quelltextvorlage hier anders liest. Stutzig muss einen der Fakt machen, dass nur die Handschrift \getsiglum{U2} explizit ein Mantrayoga lehrt. Zusätzliches Material findet sich in dieser Handschrift nur in den Sektionen \uproman{4}-\uproman{12}. Das wahrscheinlichste Szenario ist, dass der Schreiber der Handschrift \getsiglum{U2} diese Ergänzungen vorgenommen hat, um die fehlenden Ausführungen über Mantrayoga bereitzustellen.\footnote{Der in \getsiglum{U2} hergestellte Zusammenhang zwischen Siddhakuṇḍalinīyoga und Mantrayoga findet sich in ähnlicher Form in \citetitle{sarada} 25.37ab: `The \textit{kuṇḍalī} Śakti abides in the \textit{haṃsaḥ} [and] supports the [individual] Self.' (\textit{bibharti kuṇḍalī śaktir ātmānaṃ haṃsaṃ āśritā} |), see \citeauthor[2011: pp. 218, 228]{saradatilakafull}.} Handschrift \getsiglum{U2} gehört zu der \beta-Gruppe der Handschriften, welche in einem Großteils des Textes häufig schlechtere Lesarten bereithält als die \alpha-Gruppe mit der ältesten Handschrift \getsiglum{N1}. Dies lässt auch das andere Szenario zunächst weitaus unwahrscheinlicher erscheinen, nämlich, dass \getsiglum{U2} trotz der jüngeren Datierung einen ursprünglicheren Text überliefert als alle anderen Textzeugen. Allerdings weist die älteste Handschrift \getsiglum{N1} zumindest im letzten Drittel des Textes immense Lücken auf. Handschrift \getsiglum{U2} hingegen ist hier, zusammen mit einigen Kandidaten der \beta-Gruppe vollständig. Desweiteren konserviert nur Handschrift \getsiglum{U2} die definitiv korrekte Variante des Satzes \textit{bhuktimuktidā śivarūpiṇī suṣumṇānāḍī pravartate} | \textit{asyā jñānotpattau satyāṃ puruṣaḥ sarvajño bhavati} | in Sektion \uproman{3}.    
+\subsection{Mantrayoga in the \textit{Yogasiddhāntacandrikā}}
+\label{mantrayogaintrocandrika}
+Nārāyaṇatīrtha verortet Mantrayoga, wie zuvor bereits Jñānayoga im Kontext von \textit{sūtra} 1.28. Dieses \textit{sūtra} und der dazugehörige Kommentar von Nārāyatīrtha wurde bereits im Kapitel über Jñānayoga in der \textit{Yogasiddhāntacandrikā}'' (p.\pageref{jnanayogaintrocandrika} et sqq.) diskutiert und muss daher an dieser Stelle nicht wiederholt werden.\footnote{For another discussion of Mantrayoga in the \textit{Yogasiddhāntacandrikā} see \citeauthor{penna2004} 2004, pp. 71-76.} Mantrayoga in der \textit{Yogasiddhāntacandrikā} ist \textit{japa} (``low-voice muttering'') von \textit{praṇava} (``heilige Silbe \textit{auṃ}''), welches auf zwei alternative Weisen ausgeführt werden kann, als Jñānayoga\footnote{Das Konzept von Jñānayoga in der \textit{Yogasiddhāntacandrikā} diskutiere ich auf p.\pageref{jnanayogaintrocandrika}.} oder Advaitayoga.\footnote{Das Konzept von Advaitayoga in der \textit{Yogasiddhāntacandrikā} diskutiere ich auf p.\pageref{advaitayogaintrocandrika}.}    
+%\begin{quote}
+%\textit{taj japas tadarthabhāvanam} || 28 ||
+%\end{quote}
+%\begin{quote}
+%Its low-voice muttering; contemplation of its meaning. || 28 ||
+%\end{quote}
+%Dieses \textit{sūtra} gehört zu den \textit{sūtra}s des \textit{Pātañjalayogaśāstra}, welches verschiedene Methoden erläutern \textit{samādhi} zu erlangen. \textit{Sūtra} 1.28 gehört zu einer Gruppe von \textit{sūtra}s (1.23-1.28), welche als ``hingebungsvolle Verehrung des höchsten Gottes'' (\textit{īśvarapraṇidhāna}) bezeichnet wird. Während 1.24-26 das Konzept von \textit{īśvara} erläutern, erklärt 1.27 das dessen Bezeichnung (\textit{vācaka}) die Silbe \textit{auṃ} ist, die hier mit \textit{praṇava} bezeichnet wird. 
+%Nārāyaṇatīrtha erklärt zu 1.28, dass sich \textit{taj japas} (``its low-voice muttering'') auf die stille Rezitation von \textit{praṇava} bezieht. Gleichzeitig solle dessen Bedeutung, nämlich \textit{īśvara} kontempliert werden. Hierfür richtet der Übende dieser Kontemplation richtet seinen Geist auf das höchste Selbst, also \textit{īśvara}, welches mit unbegreiflich oberherrlicher Macht versehen ist. Diese Kontemplation führe zur unterscheidenen Erkenntnis zwischen der Urnatur (\textit{prakṛti}, dessen Effekten\footnote{Für eine Übersicht siehe \citeauthor{bryant2009}, 2009, pp. xlvii-liii.} und dem Selbst (\textit{puruṣa}.\footnote{\textit{Yogasiddhāntacandrikā} (Ed. p. 45): \textit{taj japa iti} | \textit{tasya praṇavasya japaḥ vidhivaduccāraṇaṃ, tadarthasya praṇavārthasya acintyaiśvaryaśaktiyuktasya paramātmano bhāvanaṃ prakṛtitatkāryapuruṣebhyo vivekenānusaṃdhānam} |} Insbesondere soll der Übende das eigene Selbst mit dem höchsten Brahman\footnote{Hier explizit als das höchste Selbst (\textit{puruṣa}) gedacht.} identifizieren, so wie unteilbare Natur von einer Qualität von dessen Substanz. Bei der kontemplativen Rezitation von \textit{praṇava} wrid eben dieses in drei Teile geteilt, denen je eine Bedeutung zugewiesen wird. Das \textit{a} (\textit{akāra} steht für das eigene Selbst, das \textit{m} (\textit{makāra}) für Brahman (das höchste Selbst) und \textit{u} (\textit{ukāra}) für Zweifelslosigkeit (\textit{avicikitsita}).\footnote{Ibid. (Ed. p. 45): \textit{tam etam ātmānaṃ ūm̐mati brahmaṇaikīkṛtya brahma vātmanomityekīkṛtya} | \textit{iti śruteḥ} | \textit{vastutas tu} - \textit{akāreṇa mamātmānamanviṣya makāreṇa brahmaṇā 'nusaṃdadhyāt ukāreṇā 'vicikitsitaḥ} | ity ādiśrutes tadarthasya jīvaparamātmanor abhedasyaitanmate dravyaguṇayor ivāvinābhāvarūpasya bhāvena cintanamityarthaḥ | japapūrvakaṃ bhāvanaṃ karttavyam |}                                                    
+%
+%Am Ende des Kommentares zu 1.28 baut Nārayaṇatīrtha dann Assoziationen mit insgesamt dreien seiner fünfzehn Yogas auf, unter anderem auch das hier im Fokus stehende Mantrayoga:
+% \begin{quote}
+%\textit{kiñ ca japa ity anena mantrayogaḥ arthabhāvanam ity anena vivekajñānā 'bhyāsarūpo jñānayogaḥ abhedabhāvarūpo 'dvaitayogaś ca saṃgṛhītaḥ} |
+%\end{quote}
+%\begin{quote}
+%Furthermore, by \textit{japa} (``low-voice muttering''), Mantrayoga is implied; by \textit{arthabhāvanam} (``contemplation of its meaning,'') Jñānayoga is implied, which is characterized by the practice of discriminative knowledge; and [additionally] Advaitayoga is implied, which has the nature of non-difference.
+%\end{quote}
+
+\subsection{Mantrayoga in the \textit{Sarvāṅgayogapradīpikā}}
+\label{mantrayogaintrosarva}
+
+Für Sundardās ist Mantrayoga die Rezitation des Namens Rāma, als Bezeichnung der höchsten Realität. 
+
 \end{document}
 
